Soporte para descripción

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block title %}nachopro: {{ article.title }}{% endblock %}
+{% block meta_description %}{{ article.description|striptags }}{% endblock %}
 
 {% block main %}
       <article>
-        <h2>{{ article.title }}i</h2>
+        <h2>{{ article.title }}</h2>
         <p>{{ article.created_at }}</p>
+        <p>{{ article.description|safe }}</p>
         <p>{{ article.content }}</p>
       </article>
 {% endblock %}
