--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}nachopro: {{ article.title }}{% endblock %}
+{% block title %}nachopro :: {{ article.title }}{% endblock %}
 {% block meta_description %}{{ article.description|striptags }}{% endblock %}
 
 {% block main %}
